Fix the scrollbar always present in the toolbar
Fixes #897

--- a/mockup/patterns/toolbar/pattern.toolbar.less
+++ b/mockup/patterns/toolbar/pattern.toolbar.less
@@ -898,7 +898,7 @@
     }
 
     nav {
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 
